Attempt to fix responsiveness on mobile

--- a/public/assets/css/stylesheet.css
+++ b/public/assets/css/stylesheet.css
@@ -15,6 +15,10 @@ body {
     height: 100%;
     width: 100%;
     background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     background-size: cover;
     background-attachment: fixed;
 }
@@ -196,68 +200,11 @@ right: 16px;
     animation-delay: 3s;
 }
 
-.intro-background {
-    opacity: 0;
-    animation-fill-mode: forwards;
-    animation-delay: 1.2s;
-}
-.intro-title {
-    opacity: 0;
-    animation-fill-mode: forwards;
-    animation-delay: 2.0s;
-}
-
-.intro-background {
-    opacity: 0;
-    animation-fill-mode: forwards;
-    animation-delay: 2.4s;
-}
 
 #footer {
     position: absolute;
     bottom: 0;
 
-}
-.parallax-background-1{
-    background-image: linear-gradient(to bottom, black, darkred, black);
-    height: 1000px;
-    margin-bottom: 50px;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-
-}
-
-.parallax-background-1 {
-    /*background-image: linear-gradient(to bottom, black, darkred, black);*/
-    background-image: url("https://cdnb.artstation.com/p/assets/images/images/009/905/085/4k/jessica-oyhenart-ireliawip-15.jpg?1521511949");
-    height: 1000px;
-    margin-bottom: 50px;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.parallax-background-2 {
-    background-image: url("https://cdn.vox-cdn.com/uploads/chorus_asset/file/11697247/jessica_oyhenart_akali_splash_final_lg.jpg");
-    height: 1000px;
-    margin-bottom: 50px;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.parallax-background-3 {
-    background-image: url("https://cdnb.artstation.com/p/assets/images/images/010/905/753/large/chengwei-pan-1.jpg?1526875963");
-    height: 600px;
-    margin-bottom: 50px;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 
 
